[project]
name = "acmed-issuer-certbot"
version = "0.2.0"
description = "certbot remote issuer plugin for acmed gen2"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "acmed-plugin-sdk>=0.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
