[project]
name = "acmed-issuer-certbot"
version = "0.2.2"
description = "certbot remote issuer plugin for acmed gen2"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "ACMed Contributors"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "acmed-plugin-sdk @ https://github.com/rohzb/acmed-plugin-sdk/archive/refs/tags/v0.2.0.tar.gz",
]

[project.urls]
Homepage = "https://github.com/rohzb/acmed-issuer-certbot"
Repository = "https://github.com/rohzb/acmed-issuer-certbot"
Issues = "https://github.com/rohzb/acmed-issuer-certbot/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "build>=1.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
